[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaws-libp"
version = "4.6.0"
authors = [
    {name = "Ryan Slominski", email = "ryans@jlab.org"},
]
description = "Jefferson Lab Alarm Warning System API"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["kafka", "alarm"]
license = {text = "MIT License"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "confluent-kafka[schema-registry,avro]>=2.2.0",
    "psutil>=5.9.5",
    "tabulate>=0.9.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "pytest>=7.4.0",
    "pylint>=2.17.4",
    "Sphinx>=6.2.1",
    "sphinx_click>=4.4.0",
    "sphinx-rtd-theme>=1.2.2",
    "sphinx-autodoc-typehints>=1.23.0"
]

[project.urls]
Repository = "https://github.com/jeffersonlab/jaws-libp.git"

[tool.pytest.ini_options]
pythonpath = [
    "./src"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.avsc"]
jaws_libp = ["*.json"]