[metadata]
name = jaws-libp
version = 4.5.0
author = Ryan Slominski
author_email = ryans@jlab.org
description = Jefferson Lab Alarm Warning System API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffersonLab/jaws-libp
project_urls =
    Bug Tracker = https://github.com/JeffersonLab/jaws-libp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    confluent-kafka[schema-registry,avro]>=2.2.0
    psutil>=5.9.5
    tabulate>=0.9.0
    requests>=2.31.0

[options.extras_require]
dev = build>=0.10.0
      pytest>=7.4.0
      pylint>=2.17.4
      Sphinx>=6.2.1
      sphinx_click>=4.4.0
      sphinx-rtd-theme>=1.2.2
      sphinx-autodoc-typehints>=1.23.0

[options.package_data]
* = *.avsc
jaws_libp.avro = *.json

[options.packages.find]
where = src